[build-system]
requires = ["hatchling>=1.21.1", "hatch-env-plus>=1.0.0"]
build-backend = "hatchling.build"

[project]
name = "exchange-calendars-extensions-api"
dynamic = ["version"]
description = "A package that defines parts of the API of the exchange-calendars-extensions package."
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Jens Keiner", email = "jens.keiner@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["exchange", "calendar", "trading", "holidays"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Operating System :: OS Independent",
]
dependencies = [
    "typing-extensions>=4,<5",
    "pandas>=1,<3",
    "pydantic >=2,<3; python_version<'3.13'",
    "pydantic >=2.8.0,<3; python_version>='3.13' and python_version<'3.14'",
    "pydantic >=2.12.0,<3; python_version>='3.14'",
]

[project.urls]
homepage = "https://github.com/jenskeiner/exchange_calendars_extensions_api/"
repository = "https://github.com/jenskeiner/exchange_calendars_extensions_api.git"
documentation = "https://github.com/jenskeiner/exchange_calendars_extensions_api/"
issues = "https://github.com/jenskeiner/exchange_calendars_extensions_api/issues"

[dependency-groups]
dev = [
    "pytest>=9,<10",
    "pytest-cov>=7,<8",
    "pre-commit>=4,<5"
]

[tool.hatch.version]
source = "env-plus"
variable = "PACKAGE_VERSION"

[tool.hatch.build.targets.sdist]
include = [
    "src/exchange_calendars_extensions/**",
    "tests/**",
]
exclude = [
    ".github",
    ".pre-commit-config.yaml",
]

[tool.hatch.build.targets.wheel]
sources = ["src"]
only-include = ["src/exchange_calendars_extensions"]

[tool.pytest.ini_options]
addopts = "--cov=exchange_calendars_extensions.api --cov-report=term-missing"
testpaths = ["tests"]
